--- a/src/components/layout/Footer/Footer.module.css
+++ b/src/components/layout/Footer/Footer.module.css
@@ -91,7 +91,7 @@
 
   .footerColumn {
     width: 100%;
-    text-align: right;
+    text-align: start;
   }
 
   .footerLogo img {
@@ -103,7 +103,7 @@
 .scrollTopBtn {
   position: fixed;
   bottom: 28px;
-  right: 28px;
+  inset-inline-end: 24px;
   width: 50px;
   height: 50px;
   background: var(--accent);
