--- a/src/components/sections/Features/Features.module.css
+++ b/src/components/sections/Features/Features.module.css
@@ -48,7 +48,7 @@
   align-items: flex-start;
 
   direction: rtl;
-  text-align: right;
+  text-align: start;
 
   transition: transform var(--transition), box-shadow var(--transition);
 }
